8243945: use driver mode in runtime tests
Reviewed-by: dholmes, dcubed, gziemski