@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,12 +22,12 @@
  */
 
 /*
-* @test
-* @summary test logging of reasons for ignoring Record attribute
-* @library /test/lib
-* @compile superNotJLRecord.jcod recordIgnoredVersion.jcod
-* @run main/othervm --enable-preview ignoreRecordAttribute
-*/
+ * @test
+ * @summary test logging of reasons for ignoring Record attribute
+ * @library /test/lib
+ * @compile superNotJLRecord.jcod recordIgnoredVersion.jcod
+ * @run driver ignoreRecordAttribute
+ */
 
 import jdk.test.lib.process.ProcessTools;
 import jdk.test.lib.process.OutputAnalyzer;
